[package]
name = "rustextile"
version = "1.0.2"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["textile", "text", "markup", "html"]
authors = ["Kirill Mavreshko <kimavr@gmail.com>"]
categories = ["parser-implementations", "text-processing", "web-programming"]
description = "Textile markup language parser for Rust"
repository = "https://github.com/kpot/rustextile"

[dependencies]
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
url = "2.3.1"
indexmap = "1.9.1"
percent-encoding = "2.2.0"
imageinfo = "0.7.5"
reqwest = { version = "0.11.12", features=["default-tls", "blocking"] }
ammonia = "3.2.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pretty_assertions = "1.3.0"
